--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,63 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter you zipcode"
-        android:textSize="@dimen/title_text_height"
-        app:layout_constraintBottom_toTopOf="@+id/zipcodeEditText"
-        app:layout_constraintEnd_toEndOf="@+id/zipcodeEditText"
-        app:layout_constraintStart_toStartOf="@+id/zipcodeEditText" />
 
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="@dimen/zipcode_entry_icon_size"
-        android:layout_height="@dimen/zipcode_entry_icon_size"
-        android:src="@drawable/ic_baseline_location_on_24"
-        app:layout_constraintBottom_toTopOf="@+id/title"
-        app:layout_constraintEnd_toEndOf="@+id/title"
-        app:layout_constraintHorizontal_bias="0.478"
-        app:layout_constraintStart_toStartOf="@+id/title" />
 
-    <EditText
-        android:id="@+id/zipcodeEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Enter zipcode"
-        android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.24" />
-
-    <Button
-        android:id="@+id/enterButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SUBMIT ZIPCODE"
-        app:layout_constraintEnd_toEndOf="@+id/zipcodeEditText"
-        app:layout_constraintStart_toStartOf="@+id/zipcodeEditText"
-        app:layout_constraintTop_toBottomOf="@+id/zipcodeEditText" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/forecastList"
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="#ABABAB"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enterButton" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
