--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#FFA000</color>
     <color name="colorAccent">#009688</color>
 
-    <color name="forecast_item_background">#EFE9E9</color>
+    <color name="list_item_background">#EFE9E9</color>
 </resources>
