--- a/app/src/main/res/layout-sw600dp/fragment_current_forecast.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_current_forecast.xml
@@ -24,11 +24,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:visibility="gone"
-        app:layout_constraintStart_toEndOf="@+id/currentForecastIcon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.19"
         tools:text="Seattle"
         tools:visibility="visible" />
 
@@ -36,11 +38,13 @@
         android:id="@+id/tempText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/locationName"
         app:layout_constraintStart_toStartOf="@+id/locationName"
-        app:layout_constraintTop_toBottomOf="@+id/locationName"
+        app:layout_constraintTop_toBottomOf="@+id/currentForecastIcon"
         tools:text="72.0°"
         tools:visibility="visible" />
 
@@ -48,11 +52,10 @@
         android:id="@+id/currentForecastIcon"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:src="@drawable/ic_baseline_wb_cloudy_24"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/locationName"
+        app:layout_constraintStart_toStartOf="@+id/locationName"
         app:layout_constraintTop_toBottomOf="@+id/locationName"
         tools:visibility="visible" />
 
@@ -60,10 +63,11 @@
         android:id="@+id/currentDescriptionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@+id/tempText"
+        app:layout_constraintEnd_toEndOf="@+id/locationName"
+        app:layout_constraintStart_toStartOf="@+id/locationName"
         app:layout_constraintTop_toBottomOf="@+id/tempText"
         tools:text="Partly Cloudy"
         tools:visibility="visible" />
@@ -72,10 +76,10 @@
         android:id="@+id/dateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/currentForecastIcon"
         app:layout_constraintStart_toStartOf="@+id/currentForecastIcon"
-        app:layout_constraintTop_toBottomOf="@+id/currentForecastIcon"
+        app:layout_constraintTop_toBottomOf="@+id/currentDescriptionText"
         tools:text="16-04-2020"
         tools:visibility="visible" />
 
